<resources>
    <string name="app_name">Photo Walk</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_api_key">AIzaSyCDz8XP4s8xrMxEjYlb5UKTUuMFnHVdTxE</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="country">Country</string>
    <string name="day_of_birth">Day of birth</string>
    <string name="month_of_birth">Month of birth</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="confirm">Confirm</string>
    <string name="gallery">Gallery</string>
    <string name="map">Map</string>
    <string name="friends">Friends</string>
    <string name="account">Account</string>
    <string name="return_text">Return</string>
    <string name="birthday">Birthday</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="e_mail">E-Mail</string>
    <string name="confirm_password">Confirm password</string>
</resources>