<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerLandscape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.RegisterFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photowalk" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/register"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/usernameRegisterBox"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/register_text"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/register_text"
            app:layout_constraintTop_toBottomOf="@+id/register_text" />

        <EditText
            android:id="@+id/emailRegisterBox"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/usernameRegisterBox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/usernameRegisterBox"
            app:layout_constraintTop_toBottomOf="@+id/usernameRegisterBox" />

        <EditText
            android:id="@+id/passwordRegisterBox"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/emailRegisterBox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailRegisterBox"
            app:layout_constraintTop_toBottomOf="@+id/emailRegisterBox" />

        <EditText
            android:id="@+id/confirmPasswordRegisterBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/passwordRegisterBox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordRegisterBox"
            app:layout_constraintTop_toBottomOf="@+id/passwordRegisterBox" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordRegisterBox"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterBox" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordRegisterBox"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toEndOf="@+id/RegisterButton"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterBox" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>